[package]
name = "physics-test"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]

[profile.release]
lto = true

[dependencies]
webplatform = "0.4.2"
libc = "*"
nphysics2d = "0.5.0"
ncollide = "0.10.0"

[replace]
"num_cpus:1.1.0" = { git = 'https://github.com/seanmonstar/num_cpus' }
